--- a/eBookStore/wwwroot/css/main.css
+++ b/eBookStore/wwwroot/css/main.css
@@ -15159,27 +15159,74 @@ input[type="number"] {
     margin:10px 0 ;
 }
 
-
-
-.btn {
-    border-radius: 0;
-    display: -webkit-inline-box;
-    display: -ms-inline-flexbox;
-    display: inline-flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    min-height: 50px;
-    font-size: 13px;
-    font-weight: 600;
-    padding: 0 50px;
-    border-radius: 3px;
-    text-transform: uppercase;
-    line-height: 1;
+.spaced {
+    margin: 80px 0;
+    display:flex;
+    flex-direction:row;
+    height: 30vh;
+    width: auto;
 }
+
+.card-item {
+    height: 150px;
+    width: 150px;
+    background-color: #b3ec65;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0 30px;
+    text-align: center;
+    border-radius: 5px;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+    color:#333;
+}
+
+
+
+.report-card {
+    height: 60px;
+    width: 350px;
+    background-color: #b3ec65;
+    margin: 20px 0;
+    padding: 0 10px;
+    border-radius: 5px;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+    color: #333;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+}
+
+    .report-card a {
+        color:#333;
+    }
+
+    .report-card a:hover {
+        color: #555;
+    }
+
+
+
+    .btn {
+        border-radius: 0;
+        display: -webkit-inline-box;
+        display: -ms-inline-flexbox;
+        display: inline-flex;
+        -webkit-box-pack: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+        -webkit-box-align: center;
+        -ms-flex-align: center;
+        align-items: center;
+        min-height: 50px;
+        font-size: 13px;
+        font-weight: 600;
+        padding: 0 50px;
+        border-radius: 3px;
+        text-transform: uppercase;
+        line-height: 1;
+    }
   .btn-outlined {
     background: transparent;
     border: 2px solid #ececec !important;
