--- a/eBookStore/Views/Orders/CustomerReport.cshtml
+++ b/eBookStore/Views/Orders/CustomerReport.cshtml
@@ -6,34 +6,67 @@
 
 @{Layout = "~/Views/Shared/_LayoutAdmin.cshtml";}
 
-    <h1>CustomerReport</h1>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>
-                    @Html.DisplayNameFor(model => model.Customername)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Total)
-                </th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model)
-            {
-                <tr>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Customername)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Total)
-                    </td>
-                    <td>
-                        <a asp-action="CustomerOrders" asp-route-id="@item.Id">Details</a>
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>
+
+<section class="breadcrumb-section">
+    <h2 class="sr-only">Site Breadcrumb</h2>
+    <div class="container">
+        <div class="breadcrumb-contents">
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a asp-controller="users" asp-action="admindashboard">Dashboard</a></li>
+                    <li class="breadcrumb-item active">Manage Orders</li>
+                </ol>
+            </nav>
+        </div>
+    </div>
+</section>
+
+
+<main class="inner-page-sec-padding-bottom">
+    <div class="container">
+
+        <div class="myaccount-content">
+            <h3>Received Orders</h3>
+
+
+            <div class="myaccount-table table-responsive text-center">
+                <table class="table table-bordered">
+                    <thead class="thead-light">
+                        <tr>
+                            <th>
+                                Order ID
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Customername)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.Total)
+                            </th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model)
+                        {
+                        <tr>
+                            <td>
+                                Fix it
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Customername)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Total)
+                            </td>
+                            <td>
+                                <a asp-action="CustomerOrders" asp-route-id="@item.Id">Details</a>
+                            </td>
+                        </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</main>
