--- a/eBookStore/Views/Users/AdminDashboard.cshtml
+++ b/eBookStore/Views/Users/AdminDashboard.cshtml
@@ -6,16 +6,56 @@
 
 @{Layout = "~/Views/Shared/_LayoutAdmin.cshtml";}
 
-<h1>Admin Dashboard</h1>
-<br />
 
-<div>
-    <h3>Books - @Model.TotalBooks</h3><br />
-    <h3>Customers - @Model.TotalCustomers</h3><br />
-    <h3>Admins - @Model.TotalAdmins</h3><br />
-    <h3>Orders - @Model.TotalOrders</h3><br />
-    <h3>Pending Orders - @Model.TotalPendingOrders</h3><br />
-    <h3>Completed Orders - @Model.TotalCompletedOrders</h3><br />
+
+
+<div class="container spaced">
+
+
+    <div class="card-item">
+        <h3>Books</h3> <br />
+        <h3>@Model.TotalBooks</h3>
+    </div>
+
+    <div class="card-item">
+        <h3>Customers</h3> <br />
+        <h3>@Model.TotalCustomers</h3>
+    </div>
+
+    <div class="card-item">
+        <h3>Orders</h3> <br />
+        <h3>@Model.TotalOrders</h3>
+    </div>
+
+    <div class="card-item">
+        <h3>Pending Orders</h3> <br />
+                                <h3>@Model.TotalPendingOrders</h3>
+    </div>
+
+    <div class="card-item">
+        <h3>Completed Orders</h3> <br />
+                                  <h3>@Model.TotalCompletedOrders</h3>
+    </div>
+
+
+
+
+
 </div>
+
+
+
+
+    @*<h1>Admin Dashboard</h1>
+    <br />
+
+    <div>
+        <h3>Books - @Model.TotalBooks</h3><br />
+        <h3>Customers - @Model.TotalCustomers</h3><br />
+        <h3>Admins - @Model.TotalAdmins</h3><br />
+        <h3>Orders - @Model.TotalOrders</h3><br />
+        <h3>Pending Orders - @Model.TotalPendingOrders</h3><br />
+        <h3>Completed Orders - @Model.TotalCompletedOrders</h3><br />
+    </div>*@
 
 
