--- a/eBookStore/Views/Users/Index.cshtml
+++ b/eBookStore/Views/Users/Index.cshtml
@@ -24,14 +24,11 @@
 </section>
 
 
-
-
-
 <main class="inner-page-sec-padding-bottom">
     <div class="container">
 
         <div class="myaccount-content">
-            <h3>Registred Cudtomers</h3>
+            <h3>Registred Customers</h3>
 
             <div class="myaccount-table table-responsive text-center">
                 <table class="table table-bordered">
@@ -63,8 +60,7 @@
                                     @Html.DisplayFor(modelItem => item.Email)
                                 </td>
                                 <td>
-                                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                                    <a asp-action="EditUserbyAdmin" asp-route-id="@item.Id">Edit</a> |
                                     <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                                 </td>
                             </tr>
