Seperate login/register for admin

--- a/eBookStore/Views/Admin/CreateAdmin.cshtml
+++ b/eBookStore/Views/Admin/CreateAdmin.cshtml
@@ -28,11 +28,11 @@
 
         <div class="row centreit">
             <div class="col-sm-12 col-md-12 col-xs-12 col-lg-6 mb--30 mb-lg--0">
-                <form asp-action="Create">
+                <form asp-action="CreateAdmin">
                     <div class="login-form">
-                        <h4 class="login-title">New Customer</h4>
+                        <h4 class="login-title">New Admin</h4>
                         <p>
-                            <span class="font-weight-bold">I am a new customer</span>
+                            <span class="font-weight-bold">I am a new admin</span>
                         </p>
                         <div class="row">
                             @*<input hidden name="role" value="customer" asp-for="Role"
@@ -65,7 +65,7 @@
                                 <input type="submit" value="Register" class="btn btn-outlined" />
                             </div>
                             <div class="col-md-12 spaceed">
-                                Already have an account? <a asp-action="Login">Login</a>
+                                Already have an account? <a asp-action="LoginAdmin">Login</a>
                             </div>
                         </div>
                     </div>
