--- a/eBookStore/Views/Shared/_Layout.cshtml
+++ b/eBookStore/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
                                         <a asp-controller="users" asp-action="Login" class="font-weight-bold">login</a>
                                         <span>or</span><a asp-controller="users" asp-action="Create">register</a>
                                     </div>
-                                    <a href="product-details.html">
+                                    <a asp-area="" asp-controller="Users" asp-action="Login">
                                         <div class="cart-block">
                                             <div class="cart-total">
                                                 <span class="text-item"> view shopping cart </span>
