--- a/eBookStore/Views/Shared/_LayoutAdmin.cshtml
+++ b/eBookStore/Views/Shared/_LayoutAdmin.cshtml
@@ -34,6 +34,9 @@
                                         <a asp-area="" asp-controller="Users" asp-action="AdminDashboard">Dashboard</a>
                                     </li>
                                     <li class="menu-item">
+                                        <a asp-area="" asp-controller="Users" asp-action="EditAdmin">My Account</a>
+                                    </li>
+                                    <li class="menu-item">
                                         <a asp-area="" asp-controller="Books" asp-action="Create">Add Book</a>
                                     </li>
                                     <li class="menu-item">
