--- a/eBookStore/Views/Users/Index.cshtml
+++ b/eBookStore/Views/Users/Index.cshtml
@@ -60,7 +60,8 @@
                                     @Html.DisplayFor(modelItem => item.Email)
                                 </td>
                                 <td>
-                                    <a asp-action="EditUserbyAdmin" asp-route-id="@item.Id">Edit</a> |
+                                    <a asp-action="EditUserByAdmin" asp-route-userId="@item.Id">Edit</a> |
+                                    <a asp-action="UserDetails" asp-route-id="@item.Id">Details</a> |
                                     <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                                 </td>
                             </tr>
