minimal ui updates

--- a/eBookStore/Views/Home/Details.cshtml
+++ b/eBookStore/Views/Home/Details.cshtml
@@ -79,7 +79,7 @@
                         <div class="card">
                             <div class="subject">
                                 <h3>Alert</h3>
-                                <p>Please Login to Buy This Book. Thank You.</p>
+                                <p>Please Login to Buy This Book.</p>
                             </div>
 
                         </div>
