--- a/eBookStore/Views/Orders/CustomerReport.cshtml
+++ b/eBookStore/Views/Orders/CustomerReport.cshtml
@@ -51,7 +51,7 @@
                         {
                         <tr>
                             <td>
-                                Fix it
+                                @Html.DisplayFor(modelItem => item.Id)
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.Customername)
